--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-  VITE_API_KEY = AIzaSyDhdo4Jw7g7aVW8JXWG-BebU9ao_WRLfeA
+  VITE_API_KEY=AIzaSyDhdo4Jw7g7aVW8JXWG-BebU9ao_WRLfeA
   VITE_AUTH_DOMAIN=customizable-forms-7fe87.firebaseapp.com
-  VITE_PROJECT_ID= customizable-forms-7fe87
+  VITE_PROJECT_ID=customizable-forms-7fe87
   VITE_STORAGE_BUCKET=customizable-forms-7fe87.appspot.com
   VITE_MESSAGING_SENDER_ID=3804900121
-  VITE_APP_ID= 1:3804900121:web:e71a8ac59514ee7d8f3388
+  VITE_APP_ID=1:3804900121:web:e71a8ac59514ee7d8f3388
