--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "customizable-forms",
+  "name": "gforms-replica",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,85 +10,57 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
-    "@mui/material": "^6.1.5",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
-    "algoliasearch": "^5.10.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.5",
-    "classnames": "^2.5.1",
-    "date-fns": "^4.1.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "firebase": "^11.0.1",
-    "firebase-functions": "^6.1.0",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "formik": "^2.4.6",
-    "formik-material-ui": "^4.0.0-alpha.2",
-    "fuse.js": "^7.0.0",
     "i18next": "^23.16.4",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.6.2",
-    "install": "^0.13.0",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "marked": "^14.1.3",
-    "moment": "^2.30.1",
-    "mongoose": "^8.7.2",
+    "jwt-decode": "^4.0.0",
+    "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
-    "npm": "^10.9.0",
-    "pg": "^8.13.0",
-    "pg-hstore": "^2.3.4",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^7.5.0",
-    "react-dnd": "^14.0.5",
-    "react-dnd-html5-backend": "^14.1.0",
-    "react-dom": "^18.0.0",
-    "react-dropzone": "^14.2.10",
-    "react-firebase-hooks": "^5.1.1",
-    "react-hook-form": "^7.53.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
-    "react-intl": "^6.8.4",
-    "react-markdown": "^9.0.1",
-    "react-notifications-component": "^4.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-select": "^5.8.1",
-    "react-table": "^7.8.0",
-    "react-tag-input": "^6.10.3",
-    "react-tagsinput": "^3.20.3",
-    "react-toastify": "^10.0.6",
-    "recoil": "^0.7.7",
-    "redux": "^5.0.1",
-    "sequelize": "^6.37.4",
-    "styled-components": "^6.1.13",
-    "sweetalert2": "^11.6.13",
-    "swr": "^2.2.5",
-    "uuid": "^10.0.0",
-    "vite": "^5.4.10",
+    "react-select": "^5.8.2",
+    "react-window": "^1.8.10",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
+    "express-validator": "^7.2.0",
     "globals": "^15.11.0",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.47",
-    "stream-browserify": "^3.0.0",
-    "tailwindcss": "^3.4.14"
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
+    "typescript-eslint": "^8.10.0",
+    "vite": "^5.4.9"
   }
 }
