--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
@@ -24,21 +28,28 @@
     "formik": "^2.4.6",
     "i18next": "^23.16.4",
     "jsonwebtoken": "^9.0.2",
+    "jsrsasign": "^11.1.0",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.2",
+    "react-toastify": "^10.0.6",
     "react-window": "^1.8.10",
+    "recharts": "^2.13.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
